# python-projects

python-demo/: README.md  pyproject.toml  requirements.txt
python-demo/src/: main.py  utils.py
python-demo/tests/: test_utils.py
