[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-python-project"
version = "0.1.0"
description = "A sample Python project"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]